--- a/codemagic.yaml
+++ b/codemagic.yaml
@@ -1,11 +1,9 @@
 workflows:
   main:
     name: Main Workflow
+    environment:
+      node: latest
     scripts:
-      - name: Install Node.js
-        script: nvm install
-      - name: Use Node.js
-        script: nvm use
       - name: Install Dependencies
         script: npm ci
       - name: Build Android APK
