--- a/codemagic.yaml
+++ b/codemagic.yaml
@@ -5,7 +5,7 @@ workflows:
       node: latest
     scripts:
       - name: Install Dependencies
-        script: npm ci
+        script: npm install
       - name: Build Android APK
         script: |
           npx react-native run-android --variant=release
