--- a/package.json
+++ b/package.json
@@ -1,20 +1,13 @@
 {
-  "name": "react-native",
+  "name": "cleaning-app",
   "version": "1.0.0",
-  "description": "React Native for Web starter template",
-  "keywords": [],
-  "main": "src/index.js",
-  "dependencies": {
-    "react": "18.2.*",
-    "react-dom": "18.2.*",
-    "react-native-web": "0.19.*",
-    "react-scripts": "3.3.0"
-  },
-  "devDependencies": {},
+  "private": true,
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test --env=jsdom",
-    "eject": "react-scripts eject"
+    "start": "node app.js"
+  },
+  "dependencies": {
+    "react": "^17.0.2",
+    "react-native": "^0.66.0"
+    // Add any other dependencies your project requires
   }
 }
